fix(new_docs): tiny style fix - align-items: flex-start

--- a/new_docs/styles/Home.module.css
+++ b/new_docs/styles/Home.module.css
@@ -24,7 +24,7 @@
 .footer a {
   display: flex;
   justify-content: flex-start;
-  align-items: start;
+  align-items: flex-start;
   flex-grow: 1;
 }
 
